# test_IV

./: README.md  common_parts.h  executorInterface.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkserv.cpp  networkserv.h
client/: CMakeLists.txt  VP_Button.qml  VP_TextEdit.qml  clientsocket.cpp  clientsocket.h  main.cpp  main.qml  qml.qrc
executors/: color.cpp  color.h  color_global.h
executors/color/: CMakeLists.txt  CMakeLists.txt.user.dc06ba6  CMakeLists.txt.user.e64cc9c
executors/rate/: CMakeLists.txt.user.dc06ba6  CMakeLists.txt.user.e64cc9c  rate.cbp  rate.cpp  rate.h
executors/state/: CMakeLists.txt  state.cpp  state.h  state_global.h
server/: CMakeLists.txt  common_parts.h  executorInterface.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkserv.cpp  networkserv.h
server/executors/color/: CMakeLists.txt  color.cpp  color.h  color_global.h
server/executors/rate/: CMakeLists.txt  rate.cbp  rate.cpp  rate.h  rate_global.h
server/executors/state/: CMakeLists.txt  state.cpp  state.h  state_global.h
